Add min height and width to home nav pic

--- a/app/assets/stylesheets/_home_nav.scss
+++ b/app/assets/stylesheets/_home_nav.scss
@@ -1,5 +1,10 @@
-.home-nav-pic {
+.home-nav-box {
   padding-right: 10;
+}
+
+.home-nav-pic {
+  min-height: 45px;
+  min-width: 45px;
 }
 
 .home-nav-name {
