--- a/app/views/messages/trash_box.js.erb
+++ b/app/views/messages/trash_box.js.erb
@@ -1,1 +1,2 @@
 $('#message-box').empty().append("<%= escape_javascript((render partial: 'trash_box') || 'Trash is empty') %>")
+$('#mailbox-links').empty().append("<%= escape_javascript(render partial: 'mailbox_links') %>")
