Change path for messages

--- a/app/views/application/_home_links.html.erb
+++ b/app/views/application/_home_links.html.erb
@@ -1,7 +1,7 @@
 <!-- <li><%#= link_to "<i class='fi-list-thumbnails'></i> Feed".html_safe, user_root_path %></li> -->
 <!-- <li><%#= link_to "<i class='fi-shopping-cart'></i> Marketpalce".html_safe, marketplace_path %></li> -->
 <li><%= link_to "<i class='fi-price-tag'></i> My Listings".html_safe, listings_path %></li>
-<li><%= link_to "<i class='fi-mail'></i> Messages".html_safe, messages_index_path %></li>
+<li><%= link_to "<i class='fi-mail'></i> Messages".html_safe, messages_path %></li>
 <li><%= link_to "<i class='fi-burst-sale'></i> Offers".html_safe, offers_index_path %></li>
 <li><%= link_to "<i class='fi-widget'></i> Settings".html_safe, edit_user_registration_path %></li>
 <!-- <li><%#= link_to "<i class='fi-power'></i> Sigh Out".html_safe,destroy_user_session_path, :method => :delete %></li> -->
