Standardize with other actions, using @message

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -6,7 +6,7 @@
   <div class="small-12 medium-7 large-8 columns">
 
     <div id="message-box" class="row">
-      <%= render partial: 'receipt', collection: @conversation, as: :message %>
+      <%= render partial: 'receipt', collection: @messages, as: :message %>
     </div>
 
     <div class="row">
