Remove remote true off of mailbox links

--- a/app/views/shared/_home_nav.html.erb
+++ b/app/views/shared/_home_nav.html.erb
@@ -16,12 +16,12 @@
       <hr class="home-nav-hr" />
       <h5 class="title"><i class="fi-price-tag"></i> <%= link_to_unless_current "My Listings", listings_path %></h5>
       <hr class="home-nav-hr" />
-      <h5 class="title"><i class="fi-mail"></i> <%= link_to_unless_current "Messages", messages_path %></h5>
+      <h5 class="title"><i class="fi-mail"></i> <%= link_to_unless(messages_page?, "Messages", messages_path) %></h5>
       <% if messages_page? %>
         <ul id="mailbox-links">
-          <li>Inbox</li>
-          <li><%= link_to_unless_current "Sent", sent_path, remote: true %></li>
-          <li><%= link_to_unless_current "Trash", trash_path, remote: true %></li>
+          <li><%= link_to_unless_current "Inbox", messages_path %></li>
+          <li><%= link_to_unless_current "Sent", sent_path %></li>
+          <li><%= link_to_unless_current "Trash", trash_path %></li>
         </ul>
       <% end %>
       <hr class="home-nav-hr" />
