--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.label :headline %>
+    <%= f.text_field :headline %>
   </div>
   <div class="field">
     <%= f.label :description %>
