Change listing title to headline

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :headline %>
+    <%= f.label :headline, "Title" %>
     <%= f.text_field :headline %>
   </div>
   <div class="field">
