--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,7 +1,7 @@
 <li>
   <img src="http://placehold.it/1000x1000&text=Thumbnail">
   <div class="panel listing-title">
-    <h5><%= link_to listing.title, listing %></h5>
+    <h5><%= link_to listing.headline, listing %></h5>
     <h6 class="subheader"><%= number_to_currency(listing.price) %></h6>
   </div>
 </li>
