Add styles for info icon font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,6 +78,15 @@
   min-height: 108px;
 }
 
+.fi-info {
+  color: gray;
+  font-size: 20px;
+}
+
+.fi-info-hover {
+  color: green;
+}
+
 #notice {
   color: green;
 }
