--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@listing) do |f| %>
+<div class="row">
   <% if @listing.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
@@ -10,35 +11,31 @@
       </ul>
     </div>
   <% end %>
+</div>
+<div class="row">
+  <div class="small-12 medium-6 columns">
 
-  <div class="field">
-    <%= f.label :headline, "Title" %>
+    <%= f.label :headline %>
     <%= f.text_field :headline %>
-  </div>
-  <div class="field">
+
     <%= f.label :description %>
     <%= f.text_area :description %>
-  </div>
-  <div class="field">
+
     <%= f.label :price %>
     <%= f.text_field :price %>
-  </div>
 
-  <div class="field">
     <%= f.label "Category" %>
-    <%= f.collection_radio_buttons :category_id, @categories, :id, :name, { checked: @categories.first.id }, { id: 'categories_radio' } %>
-  </div>
+    <%= f.collection_radio_buttons :category_id, @categories, :id, :name, { checked: @categories.first.id }, { id: 'categories_radio' } %><br />
 
-  <div class="field">
-    <%= f.label :shippable, "Willing to ship?" %>
     <%= f.check_box :shippable %>
-  </div>
-  <div class="field">
-    <%= f.label :publish, "Publish now?" %>
-    <%= f.check_box :publish %>
-  </div>
+    <%= f.label :shippable, "Willing to ship?" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Check this box if you are willing to ship the item to the buyer."><i class="fi-info"></i></span><br />
 
-  <div class="actions">
-    <%= f.submit "Save Listing" %>
+    <%= f.check_box :publish %>
+    <%= f.label :publish, "Publish now?" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Check this box if you want to publish the listing right now.<br /><br />You can always pause a listing by unchecking this box later."><i class="fi-info"></i></span>
+
+    <div class="actions">
+      <%= f.submit "Save Listing" %>
+    </div>
   </div>
+</div>
 <% end %>
