Change to link_to :back

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -7,7 +7,7 @@
     <%= render 'form' %>
 
     <%= link_to 'Show', @listing %> |
-    <%= link_to 'Back', listings_path %>
+    <%= link_to 'Back', :back %>
 
   </div>
 </div>
