--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -21,7 +21,13 @@
     <%= f.label :description %>
     <%= f.text_area :description %>
 
-    <%= f.label :price %>
+    <%= f.label :sale_type, :class => 'inline-label' %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Select 'Sell now' if you want to give your listing a firm price.<br /><br />If you select 'Take offers', potential buyers will give you offers."><i class="fi-info"></i></span><br />
+    <%= f.radio_button(:sale_type, "sale") %>
+    <%= f.label "Sell now" %>
+    <%= f.radio_button(:sale_type, "offer") %>
+    <%= f.label "Take offers" %><br />
+
+    <%= f.label :price, :class => "inline-label" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Enter a price, even if you selected 'Take offers'. We won't display the price for listings you're taking offers on, but we'll use it to help search and sort listings."><i class="fi-info"></i></span>
     <%= f.text_field :price %>
 
     <%= f.label "Category" %>
@@ -34,7 +40,7 @@
     <%= f.label :publish, "Publish now?" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Check this box if you want to publish the listing right now.<br /><br />You can always pause a listing by unchecking this box later."><i class="fi-info"></i></span>
 
     <div class="actions">
-      <%= f.submit "Save Listing" %>
+      <%= f.submit "Save Listing", :class => "button tiny" %>
     </div>
   </div>
 </div>
