Change to bonsai list

--- a/app/views/application/_hero.html.erb
+++ b/app/views/application/_hero.html.erb
@@ -1,8 +1,9 @@
 <div id="hero">
   <div class="row">
     <div class="small-12 columns hero-content">
-      <h1>Bon<span class="header-faded">{sai}</span></h1>
-      <h1><span class="header-faded">{Re}</span>cycle</h1>
+      <!-- <h1>Bon<span class="header-faded">{sai}</span></h1>
+      <h1><span class="header-faded">{Re}</span>cycle</h1> -->
+      <h1>bonsai list</h1>
     </div>
   </div>
 </div>
