Add styles for marketplace nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,14 @@
 
 }
 
+.marketplace-nav-title {
+  font-size: large;
+}
+
+.nav-hr {
+  margin: 10px 0;
+}
+
 .message-block {
   padding-left: 0px;
   padding-right: 10px;
