--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body class="<%= controller.controller_name %>">
 
+    <%= render partial: "icon_bar" %>
     <%= render partial: "topbar" %>
     <%= render partial: "hero" %>
     <div class="row">
@@ -24,7 +25,6 @@
     </div>
 
     <%= yield %>
-
     <%= render partial: "footer" %>
 
     <%= javascript_include_tag "application" %>
