--- a/app/views/application/_icon_bar.html.erb
+++ b/app/views/application/_icon_bar.html.erb
@@ -1,22 +1,9 @@
-<div id="mobile-icon-bar" class="icon-bar five-up show-for-small-only">
-  <a class="item">
-    <i class="fi-home"></i>
-    <label>Home</label>
-  </a>
-  <a class="item">
-    <i class="fi-bookmark"></i>
-    <label>Bookmark</label>
-  </a>
-  <a class="item">
-    <i class="fi-info"></i>
-    <label>Info</label>
-  </a>
-  <a class="item">
-    <i class="fi-mail"></i>
-    <label>Mail</label>
-  </a>
-  <a class="item">
-    <i class="fi-like"></i>
-    <label>Like</label>
-  </a>
+<div id="mobile-icon-bar" class="icon-bar four-up show-for-small-only">
+
+  <%= link_to "<i class='fi-home'></i><label>Home</label>".html_safe, user_root_path, :class => "item" %>
+  <%= link_to "<i class='fi-price-tag'></i>".html_safe, listings_path, :class => "item" %>
+  <%= link_to "<i class='fi-mail'></i>".html_safe, messages_path, :class => "item" %>
+  <%= link_to "<i class='fi-widget'></i>".html_safe, edit_user_registration_path, :class => "item" %>
+  <%#= link_to "<span></span>".html_safe, user_root_path, :class => "right-off-canvas-toggle item menu-icon" %>
+
 </div>
