--- a/app/assets/stylesheets/_search_filter.scss
+++ b/app/assets/stylesheets/_search_filter.scss
@@ -41,9 +41,15 @@ p {
 }
 
 .hr-order-by-mobile {
-  margin-bottom: 1px;
+  margin-bottom: 5px;
+  margin-top: 42px;
 }
 
 .hr-distance-mobile {
   margin-bottom: 5px;
+  margin-top: 42px;
+}
+
+.hr-distance-medium {
+  margin: 5px 0;
 }
