--- a/app/views/marketplace/_marketplace_search_filter.html.erb
+++ b/app/views/marketplace/_marketplace_search_filter.html.erb
@@ -12,8 +12,8 @@
         <div class="medium-1 columns filter-pipe hide-for-small">
           <span>|</span>
         </div>
-      </div>
       <hr class="hide-for-medium-up hr-order-by-mobile" />
+      </div>
       <div class="small-12 medium-6 large-3 columns">
         <div class="small-6 columns no-padding">
           <p class="hide-for-small distance-label">Distance:</p>
@@ -22,9 +22,10 @@
         <div class="small-6 columns no-padding">
           <%= select_tag :distance_filter, options_for_select([["All", "10000"], ["500 mi", "500"], ["100 mi", "100"], ["50 mi", "50"]], ), :id => 'distance_filter', :class => 'filter-sort' %>
         </div>
-      </div>
       <hr class="hide-for-medium-up hr-distance-mobile" />
+      </div>
       <div id="" class="small-12 medium-12 large-5 columns">
+      <hr class="show-for-medium-only hr-distance-medium" />
         <div class="row collapse">
           <div id="filter-search" class="small-9 columns">
             <%= text_field_tag :search, params[:search], :class => "marketplace-search", :placeholder => "Search" %>
