--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -2,7 +2,11 @@
   <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
 </div>
 <div class="small-9 medium-10 columns message-block left">
-  <p class="message-name"><a href="#"><%= conversation.messages.last.sender.full_name %></a></p>
+  <% if action_name == "sent_box" %>
+    <p class="message-name"><a href="#"><%= recipient(conversation).full_name %></a></p>
+  <% else %>
+    <p class="message-name"><a href="#"><%= conversation.messages.last.sender.full_name %></a></p>
+  <% end %>
   <div class="row">
     <div class="small-12 columns">
       <p class=" <%= 'read_message' unless conversation.receipts_for(current_user).first.is_unread? %>"><%= link_to conversation.subject, message_path(conversation) %></p>
