--- a/app/views/marketplace/_marketplace_search_filter.html.erb
+++ b/app/views/marketplace/_marketplace_search_filter.html.erb
@@ -1,7 +1,20 @@
 <div class="row">
   <div id="filter-bar" class="small-12 columns panel">
     <div class="row">
-
+      <div class="small-12 columns hide-for-medium-up">
+        <dl class="accordion" data-accordion>
+          <dd class="accordion-navigation">
+            <a href="#panel2">Select Category</a>
+            <div id="panel2" class="content">
+              <ul>
+                <%= link_to_unless_current "All listings", marketplace_path %>
+                <%= render partial: @categories %>
+              </ul>
+            </div>
+          </dd>
+        </dl>
+        <hr class="hide-for-medium-up hr-categories-mobile" />
+      </div>
       <div class="small-12 medium-6 large-4 columns">
         <div class="small-6 medium-5 columns no-padding">
           <p class="left-label">Order by:</p>
@@ -12,7 +25,7 @@
         <div class="medium-1 columns filter-pipe hide-for-small">
           <span>|</span>
         </div>
-      <hr class="hide-for-medium-up hr-order-by-mobile" />
+        <hr class="hide-for-medium-up hr-order-by-mobile" />
       </div>
       <div class="small-12 medium-6 large-3 columns">
         <div class="small-6 columns no-padding">
@@ -22,7 +35,7 @@
         <div class="small-6 columns no-padding">
           <%= select_tag :distance_filter, options_for_select([["All", "10000"], ["500 mi", "500"], ["100 mi", "100"], ["50 mi", "50"]], ), :id => 'distance_filter', :class => 'filter-sort' %>
         </div>
-      <hr class="hide-for-medium-up hr-distance-mobile" />
+        <hr class="hide-for-medium-up hr-distance-mobile" />
       </div>
       <div id="" class="small-12 medium-12 large-5 columns">
       <hr class="show-for-medium-only hr-distance-medium" />
