--- a/app/views/marketplace/index.html.erb
+++ b/app/views/marketplace/index.html.erb
@@ -8,6 +8,7 @@
   </div> <!-- End Side Bar -->
   <div class="small-12 medium-8 large-9 columns">
     <%= render partial: "marketplace_search_filter" %>
+    <h1><%= @category %></h1>
     <%= render partial: "shared/marketplace_items" %>
   </div>
 </div>
