Change path for offers link

--- a/app/views/shared/_home_nav.html.erb
+++ b/app/views/shared/_home_nav.html.erb
@@ -25,7 +25,7 @@
         </ul>
       <% end %>
       <hr class="home-nav-hr" />
-      <h5 class="title"><i class="fi-burst-sale"></i> <%= link_to_unless_current "Offers", offers_index_path %></h5>
+      <h5 class="title"><i class="fi-burst-sale"></i> <%= link_to_unless_current "Offers", offers_path %></h5>
       <hr class="home-nav-hr" />
       <h5 class="title"><i class="fi-wrench"></i> <%= link_to_unless_current "Settings", edit_user_registration_path %></h5>
       <!-- <h5 class="title"><a href="#"><i class="fi-photo"></i> Photos</a></h5>
