--- a/app/views/listings/_pricing_table.html.erb
+++ b/app/views/listings/_pricing_table.html.erb
@@ -17,9 +17,7 @@
       <div class="row">
         <div class="small-12 medium-8 large-6 columns">
           <p class="lead">Add a message</p>
-          <%= label_tag :subject %>
-          <%= text_field_tag :subject, @message_subject %>
-          <%= label_tag :body %>
+          <%= label_tag :body, "Message" %>
           <%= text_area_tag :body, @message_body %>
           <% if @listing.sale_type == "offer" %>
             <%= label_tag :offer %>
