Change path to use inquires#create

--- a/app/views/listings/_pricing_table.html.erb
+++ b/app/views/listings/_pricing_table.html.erb
@@ -12,7 +12,7 @@
   <li class="cta-button"><%= pricing_table_button %></li>
 
   <div id="interestedModal" class="reveal-modal" data-reveal>
-    <%= form_tag im_interested_path(@listing) do %>
+    <%= form_tag inquiries_path(@listing) do %>
       <h2>Like it? Let them know your interested!</h2>
       <div class="row">
         <div class="small-12 medium-8 large-6 columns">
