Change path for load more button

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -116,7 +116,7 @@
       <hr />
     </div> <!-- End Message -->
     <div class="row">
-      <%= link_to "Load More", messages_index_path, class: "button radius expand bon-button" %>
+      <%= link_to "Load More", messages_path, class: "button radius expand bon-button" %>
     </div>
   </div> <!-- End Messages -->
 </div>
