--- a/app/views/marketplace/_marketplace_search_filter.html.erb
+++ b/app/views/marketplace/_marketplace_search_filter.html.erb
@@ -27,7 +27,7 @@
         </div>
         <hr class="hide-for-medium-up hr-order-by-mobile" />
       </div>
-      <div class="small-12 medium-6 large-3 columns">
+      <div class="small-12 medium-6 large-3 columns distance-filter-padding">
         <div class="small-6 columns no-padding">
           <p class="hide-for-small distance-label">Distance:</p>
           <p class="hide-for-medium-up mobile-distance-label">Distance:</p>
