Add path to load more button

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -22,7 +22,7 @@
         <%= (render partial: 'message', collection: @messages, as: :conversation) || "No messages" %>
       </div>
       <div class="row">
-        <%= link_to "Load More", class: "button radius expand bon-button" %>
+        <%= link_to "Load More", messages_path, :class => "button radius expand bon-button" %>
       </div>
     </div>
   </div>
