Change to use shared/pricing_table

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,7 +4,7 @@
     <img src="http://placehold.it/610x610&text=Thumbnail">
   </div>
   <div class="small-12 medium-4 columns">
-    <%= render partial: "pricing_table" %>
+    <%= render partial: "shared/pricing_table" %>
   </div>
 </div>
 <div class="row panel top-margin">
