Change to use listing partial

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -20,7 +20,7 @@
     </div>
     <!-- Message -->
     <div class="row">
-      <%= (render partial: 'offer', collection: @offer_listings) || "No offers" %>
+      <%= (render partial: 'listing', collection: @offer_listings) || "No offers" %>
     </div> <!-- End Message -->
     <div class="row">
       <div class="small-12 columns panel">
