--- a/app/views/temp_views/offers_show.html.erb
+++ b/app/views/temp_views/offers_show.html.erb
@@ -2,7 +2,7 @@
   <!-- Nav Sidebar -->
   <div class="small-12 medium-5 large-4 columns">
     <img src="http://placehold.it/610x610&text=Thumbnail">
-    <%= render partial: "pricing_table" %>
+    <%= render partial: "shared/pricing_table" %>
   </div>
   <!-- Messages -->
   <div class="small-12 medium-7 large-8 columns">
@@ -34,8 +34,8 @@
         </div>
       </div>
       <div class="small-12 medium-9 large-6 columns">
-        <%= link_to "<i class='fi-like'></i> Accept".html_safe, offers_show_path, class: "button radius bon-button offers-page-button" %>
-        <%= link_to "<i class='fi-mail'></i> Message".html_safe, offers_show_path, class: "button radius bon-button offers-page-button" %>
+        <%= link_to "<i class='fi-like'></i> Accept".html_safe, offers_path, :class => "button radius bon-button offers-page-button" %>
+        <%= link_to "<i class='fi-mail'></i> Message".html_safe, offers_path, :class => "button radius bon-button offers-page-button" %>
       </div>
       <hr />
       <div class="small-3 medium-2 columns message-pic">
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="small-12 columns">
-        <%= link_to "<i class='fi-mail'></i> Message".html_safe, offers_show_path, class: "button radius bon-button offers-page-button" %>
+        <%= link_to "<i class='fi-mail'></i> Message".html_safe, offers_path, :class => "button radius bon-button offers-page-button" %>
       </div>
       <hr />
       <div class="small-3 medium-2 columns message-pic">
@@ -116,7 +116,7 @@
       <hr />
     </div> <!-- End Message -->
     <div class="row">
-      <%= link_to "Load More", messages_index_path, class: "button radius expand bon-button" %>
+      <%= link_to "Load More", messages_path, :class => "button radius expand bon-button" %>
     </div>
   </div> <!-- End Messages -->
 </div>
