Only show sent on inbox

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -19,8 +19,18 @@
         </div>
       </div>
       <div class="row">
-        <%= (render partial: 'message', collection: @messages, as: :conversation) || "No messages" %>
+        <%= (render partial: 'message', collection: @new_messages, as: :conversation) || no_messages %>
       </div>
+      <% if inbox? %>
+        <div class="row">
+          <div class="small-12 columns panel">
+            <h4>Read</h4>
+          </div>
+        </div>
+        <div class="row">
+          <%= (render partial: 'message', collection: @read_messages, as: :conversation) || no_messages %>
+        </div>
+      <% end %>
       <div class="row">
         <%= link_to "Load More", messages_path, :class => "button radius expand bon-button" %>
       </div>
