Truncate name, add trash icon

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -2,16 +2,28 @@
   <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
 </div>
 <div class="small-9 medium-10 columns message-block left">
-  <% if action_name == "sent_box" %>
-    <p class="message-name"><a href="#"><%= recipient(conversation).full_name %></a></p>
-  <% else %>
-    <p class="message-name"><a href="#"><%= conversation.messages.last.sender.full_name %></a></p>
-  <% end %>
+  <div class="row">
+    <div class="small-10 medium-7 columns">
+      <% if action_name == "sent_box" %>
+        <p class="message-name"><a href="#"><%= truncate(recipient(conversation).full_name, 33) %></a></p>
+      <% else %>
+        <p class="message-name"><a href="#"><%= truncate(conversation.messages.last.sender.full_name, 33) %></a></p>
+      <% end %>
+    </div>
+    <div class="small-1 columns hide-for-medium-up">
+      <i class="fi-trash"></i>
+    </div>
+    <div class="small-12 medium-4 columns">
+      <p class="message-date"><%= conversation.messages.last.created_at.strftime('%A %b %e %l:%M %P') %></p>
+    </div>
+    <div class="small-1 columns hide-for-small-only">
+      <i class="fi-trash"></i>
+    </div>
+  </div>
   <div class="row">
     <div class="small-12 columns">
       <p class=" <%= 'read_message' unless conversation.receipts_for(current_user).first.is_unread? %>"><%= link_to conversation.subject, message_path(conversation) %></p>
     </div>
   </div>
-  <p class="message-date"><%= conversation.messages.last.created_at.strftime('%A %b %e %l:%M %P') %></p>
 </div>
 <hr />
