Add styles to trash icom

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,6 +105,15 @@
   padding-bottom: 20px;
 }
 
+.trash-link {
+  margin-left: 20px;
+}
+
+.fi-trash {
+  color: #246020;
+  font-size: large;
+}
+
 #notice {
   color: green;
 }
