--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,26 +3,21 @@
 </div>
 <div class="small-9 medium-10 columns message-block left">
   <div class="row">
-    <div class="small-10 medium-7 columns">
+    <div class="small-10 columns">
       <% if action_name == "sent_box" %>
-        <p class="message-name"><a href="#"><%= truncate(recipient(conversation).full_name, 33) %></a></p>
+        <p class="message-name"><a href="#"><%= truncate(recipient(conversation).full_name, length: 33) %></a></p>
       <% else %>
-        <p class="message-name"><a href="#"><%= truncate(conversation.messages.last.sender.full_name, 33) %></a></p>
+        <p class="message-name"><a href="#"><%= truncate(conversation.messages.last.sender.full_name, length: 33) %></a></p>
       <% end %>
     </div>
-    <div class="small-1 columns hide-for-medium-up">
-      <i class="fi-trash"></i>
+    <div class="small-1 columns">
+      <%= link_to "<i class='fi-trash'></i>".html_safe, messages_path, :class => "trash-link" %>
     </div>
-    <div class="small-12 medium-4 columns">
-      <p class="message-date"><%= conversation.messages.last.created_at.strftime('%A %b %e %l:%M %P') %></p>
-    </div>
-    <div class="small-1 columns hide-for-small-only">
-      <i class="fi-trash"></i>
-    </div>
-  </div>
-  <div class="row">
     <div class="small-12 columns">
       <p class=" <%= 'read_message' unless conversation.receipts_for(current_user).first.is_unread? %>"><%= link_to conversation.subject, message_path(conversation) %></p>
+    </div>
+    <div class="small-12 columns">
+      <p class="message-date"><%= conversation.messages.last.created_at.strftime('%A %b %e %l:%M %P') %></p>
     </div>
   </div>
 </div>
