--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -21,7 +21,7 @@
     </div>
     <!-- Message -->
     <div class="row">
-      <%= render partial: 'inquiry', collection: @inquiries %>
+      <%= render partial: 'inquiry', collection: @new_inquiries %>
     </div> <!-- End Message -->
     <div class="row">
       <div class="small-12 columns panel">
@@ -30,45 +30,22 @@
     </div>
     <!-- Message -->
     <div class="row">
-      <div class="small-3 medium-2 columns message-pic">
+      <%= render partial: 'inquiry', collection: @seen_inquiries %>
+
+<!--       <div class="small-3 medium-2 columns message-pic">
         <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
       </div>
       <div class="small-9 medium-10 columns message-block left">
         <p class="message-name"><a href="#">Buyer Namenamename</a></p>
         <p class="message-date">Tuesday 2:45 PM</p>
-<!--               <div class="row">
+              <div class="row">
           <div class="small-12 columns">
             <p> Bacon ipsum dolor sit amet nulla ham qui sint nyan...</p>
           </div>
-        </div> -->
+        </div>
       </div>
-      <hr />
-      <div class="small-3 medium-2 columns message-pic">
-        <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
-      </div>
-      <div class="small-9 medium-10 columns message-block">
-        <p class="message-name"><a href="#">Buyer Namenamename</a></p>
-        <p class="message-date">Tuesday 2:45 PM</p>
-<!--               <div class="row">
-          <div class="small-12 columns">
-            <p> Bacon ipsum dolor sit amet nulla ham qui sint nyan...</p>
-          </div>
-        </div> -->
-      </div>
-      <hr />
-      <div class="small-3 medium-2 columns message-pic">
-        <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
-      </div>
-      <div class="small-9 medium-10 columns message-block">
-        <p class="message-name"><a href="#">Buyer Namenamename</a></p>
-        <p class="message-date">Tuesday 2:45 PM</p>
-<!--               <div class="row">
-          <div class="small-12 columns">
-            <p> Bacon ipsum dolor sit amet nulla ham qui sint nyan...</p>
-          </div>
-        </div> -->
-      </div>
-      <hr />
+      <hr /> -->
+
     </div> <!-- End Message -->
     <div class="row">
       <%= link_to "Load More", messages_path, :class => "button radius expand bon-button" %>
