--- a/app/views/messages/_receipt.html.erb
+++ b/app/views/messages/_receipt.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="small-9 medium-10 columns message-block left">
   <p class="message-name"><a href="#"><%= message.sender.full_name %></a></p>
-  <p class="message-date"><%= message.created_at %></p>
+  <p class="message-date"><%= message.created_at.strftime('%A %b %e %l:%M %P') %></p>
   <div class="row">
     <div class="small-12 columns">
       <p><%= message.body %></p>
