--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -21,7 +21,7 @@
     </div>
     <!-- Message -->
     <div class="row">
-      <%= render partial: 'inquiry', collection: @new_inquiries %>
+      <%= (render partial: 'inquiry', collection: @new_inquiries) || no_offers %>
     </div> <!-- End Message -->
     <div class="row">
       <div class="small-12 columns panel">
@@ -30,7 +30,7 @@
     </div>
     <!-- Message -->
     <div class="row">
-      <%= render partial: 'inquiry', collection: @seen_inquiries %>
+      <%= (render partial: 'inquiry', collection: @seen_inquiries) || no_offers %>
 
 <!--       <div class="small-3 medium-2 columns message-pic">
         <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
