--- a/app/views/application/_topbar_links.html.erb
+++ b/app/views/application/_topbar_links.html.erb
@@ -1,11 +1,12 @@
 <li class="topbar-link-moz"><%= link_to("<i class='fi-shopping-cart'></i> Marketplace".html_safe, marketplace_path, :class => marketplace_page? ? "current topbar-link-moz" : "topbar-link-moz") %></li>
 <% if user_signed_in? %>
-  <li class="has-dropdown topbar-link-moz">
+  <li class="has-dropdown topbar-link-moz hide-for-small-only">
     <%= link_to "<i class='fi-home'></i> Home".html_safe, user_root_path, :class => "topbar-link-moz" %>
     <ul class="dropdown">
       <%= render partial: "home_links" %>
     </ul>
   </li>
+  <%= render partial: "mobile_home_links" %>
   <li class="topbar-link-moz"><%= link_to "<i class='fi-power'></i> Sign Out".html_safe, destroy_user_session_path, :class => "topbar-link-moz", :method => :delete %></li>
 <% else %>
   <li class="topbar-link-moz"><%= link_to "<i class='fi-power'></i> Sign In".html_safe, new_user_session_path, :class => "topbar-link-moz" %></li>
