Remove padding on search bar

--- a/app/assets/stylesheets/_search_filter.scss
+++ b/app/assets/stylesheets/_search_filter.scss
@@ -68,6 +68,10 @@ p {
   .distance-filter-padding {
     padding-left: 0px
   }
+
+  .my-listings-search-bar {
+    padding-left: 0;
+  }
 }
 
 @media only screen and (min-width: 64.063em) {
